--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,9 +9,18 @@
 
       <!-- メニュー項目 -->
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item"><%= link_to  '新規タスクの作成', new_task_path, class: 'nav-link' %></li>
-        </ul>
+       <<% if logged_in? %>
+         <div class="btn-group">
+            <ul class="navbar-nav">
+              <li class="ms-3"><%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link' %></li>
+            </ul>
+         </div>
+        <% else %> 
+          <ul class="navbar-nav">
+            <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
+          </ul>
+        <% end %>
       </div>
     </div>
   </nav>
