--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,27 +1,27 @@
-<h1>タスク一覧</h1>
-<% if @tasks.any? %>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>ステータス</th>
-        <th>タスク</th>
-      </tr>
-    </thead>
-    <tbody>
-        <% @tasks.each do |task| %>
-            <tr>
-                <td><%= link_to task.id, task %></td>
-                <td><%= task.status %></td>
-                <td><%= task.content %></td>
-            </tr>
-            <% end %>
-    </tbody>
-    </table>
-    <div>
-        <%== pagy_bootstrap_nav(@pagy) %>
-    </div>
-<% end %>
+  <h1>タスク一覧</h1>
+  <% if @tasks.any? %>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>ステータス</th>
+          <th>タスク <span class="badge bg-secondary"><%= @counts_tasks %></span></th>
+        </tr>
+      </thead>
+      <tbody>
+          <% @tasks.each do |task| %>
+              <tr>
+                  <td><%= link_to task.id, task %></td>
+                  <td><%= task.status %></td>
+                  <td><%= task.content %></td>
+              </tr>
+          <% end %>
+      </tbody>
+      </table>
+      <div>
+          <%== pagy_bootstrap_nav(@pagy) %>
+      </div>
+  <%= link_to '新規タスクの作成', new_task_path, class: "btn btn-primary"%>
+  <% end %>
 
-
-<%= link_to '新規タスクの作成', new_task_path, class: "btn btn-primary"%>
+  
