--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,7 @@
   <div class="col-sm-6 offset-sm-3">
 
     <%= form_with(model: @user) do |f| %>
+     <!-- 登録に失敗したときに、エラーメッセージを表示させる -->
      <%= render 'layouts/error_messages', model: f.object %>
 
       <div class="mb-3">
@@ -32,3 +33,5 @@
     <% end %>
   </div>
 </div>
+
+<!-- 新規ユーザ登録フォーム -->
